# NonASTObfuscation

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_LOCAL_1805.txt  README.md  a.out  changeNames.cpp  main.cc  main.cpp  obfuscatedFile.cc  obfuscatedFile.cpp  obfuscator.cc  obfuscator.cpp  obfuscator.h  testFile.cc  testFile.cpp
.github/workflows/: cmake.yml
es_seq_test/: a.out  char_to_hex.txt  eseq.cc
obfuscator/: CMakeLists.txt  Obfuscator.cc  Obfuscator.h  SourcesController.cc  obfuscator.cc  obfuscator.h  sourcesController.cc  sourcesController.h
src/obfuscator/: CMakeLists.txt  CommentsCleaner.cc  CommentsCleaner.h  EscapeSequencesInjector.cc  EscapeSequencesInjector.h  FilesCompiler.cc  FilesCompiler.h  IfConditionChanger.cc  IfConditionChanger.h  NOPInjector.cc  NOPInjector.h  NamesChanger.cc  NamesChanger.h  Obfuscator.cc  Obfuscator.h  QualityChecker.cc  QualityChecker.h  SourcesController.cc  SourcesController.h  TrigraphSequencesInjector.cc  TrigraphSequencesInjector.h
src/test/: CMakeLists.txt  dumpTestFile.cc  obfuscationTests.cc  testFile.cc
src/test/testFiles/: commentsTest.cc  commentsTestOutput.cc  dumpTestFile.cc  testFile.cc
test/: CMakeLists.txt  dumpTestFile.cc  obfuscationTests.cc  tests.cc
trigraph_sequences_test_files/: a.out  test_tri.cc
